--- a/style.css
+++ b/style.css
@@ -1,6 +1,76 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+    background: rgb(128, 70, 128);
+    color: rgb(4, 18, 65);
     padding: 10px;
-    font-family: Arial, sans-serif;
+    font-family: arial;
+}
+#all-contents {
+    max-width: 800px;
+    margin: auto;
+}
+
+/* navigation menu */
+nav {
+    background: rgb(89, 254, 153);
+    margin-bottom: 20px;
+    display: flex;
+    padding: 10px;
+}
+
+h1 {
+    display: flex;
+    align-items: center;
+    color: black;
+    flex: 1;
+    margin: 0;
+}
+
+#nav-ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-li {
+    display: flex;
+    padding: 0 10px;
+    color: black;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+/* main container area beneath menu */
+main {
+    background: rgb(89, 254, 153);
+    display: flex;
+    margin-top: 10px;
+}
+
+.sidebar {
+    margin-right: 25px;
+    padding: 10px;
+}
+
+.sidebar-img {
+    width: 200px;
+    border: red;
+}
+
+.content {
+    flex:1;
+    padding: 15px;
+}
+
+/* interests section styles */
+#interests {
+    border: 4px red;
+    padding: 8px;
+    margin-top: 20px;
+}
+
+h2, h3 {
+    margin: 0px;
 }
